--- a/config/storage.yml
+++ b/config/storage.yml
@@ -14,6 +14,16 @@ local:
 #   region: us-east-1
 #   bucket: your_own_bucket
 
+# Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
+yandex:
+  service: S3
+  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+  region: ru-central1
+  bucket: files-ushi
+  endpoint: 'https://storage.yandexcloud.net'
+  force_path_style: true
+
 # Remember not to checkin your GCS keyfile to a repository
 # google:
 #   service: GCS
